<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mint"
    android:orientation="vertical"
    tools:context="com.damarazka.myapplication.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/app_name"
        android:textColor="@color/blue"
        android:textSize="32sp"
        android:textStyle="bold" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/vp_article"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_margin="16dp" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/dots"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal" />

            <!--region / Menu dzikir dan doa-->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_dashboard_menu"
                android:padding="16dp">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:gravity="center"
                    android:text="@string/txt_kumpulan_doa_dzikir_sehari_hari"
                    android:textColor="@color/mint"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_qauliyah"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:layout_marginVertical="5dp"
                    app:cardBackgroundColor="@color/mint"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="5dp"
                    app:layout_constraintEnd_toStartOf="@id/card_dzikir"
                    app:layout_constraintHorizontal_chainStyle="spread"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/title"
                    app:strokeWidth="0dp">

                    <LinearLayout
                        android:layout_width="170dp"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="10dp">

                        <ImageView
                            android:layout_width="75dp"
                            android:layout_height="75dp"
                            android:layout_marginEnd="8dp"
                            android:contentDescription="@string/txt_desc_orang_lagi_doa"
                            android:src="@drawable/ic_orangsholat" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:text="@string/sunnah_doa_sholat"
                            android:textColor="@color/blue"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_dzikir"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:layout_marginVertical="5dp"
                    app:cardBackgroundColor="@color/mint"
                    app:cardCornerRadius="15dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/card_qauliyah"
                    app:layout_constraintTop_toBottomOf="@id/title"
                    app:strokeWidth="0dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="10dp">

                        <ImageView
                            android:layout_width="75dp"
                            android:layout_height="75dp"
                            android:layout_marginEnd="8dp"
                            android:contentDescription="@string/txt_desc_jam"
                            android:src="@drawable/ic_jam2" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:text="@string/txt_dzikir_setiap_saat"
                            android:textColor="@color/blue"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_harian"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="5dp"
                    android:layout_marginHorizontal="8dp"
                    app:cardBackgroundColor="@color/mint"
                    app:cardCornerRadius="15dp"
                    app:layout_constraintEnd_toStartOf="@id/card_pagipetang"
                    app:layout_constraintHorizontal_chainStyle="spread"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/card_qauliyah"
                    app:strokeWidth="0dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="10dp">

                        <ImageView
                            android:layout_width="75dp"
                            android:layout_height="75dp"
                            android:layout_marginEnd="8dp"
                            android:contentDescription="@string/txt_desc_tasbih"
                            android:src="@drawable/ic_tasbih2" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:text="@string/dzikir_doa_harian"
                            android:textColor="@color/blue"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_pagipetang"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="5dp"
                    android:layout_marginHorizontal="8dp"
                    app:cardBackgroundColor="@color/mint"
                    app:cardCornerRadius="15dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/card_harian"
                    app:layout_constraintTop_toBottomOf="@id/card_dzikir"
                    app:strokeWidth="0dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="10dp">

                        <ImageView
                            android:layout_width="75dp"
                            android:layout_height="75dp"
                            android:layout_marginEnd="8dp"
                            android:contentDescription="@string/txt_desc_pagi_petang"
                            android:src="@drawable/ic_masjid" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:text="@string/dzikir_pagi_petang"
                            android:textColor="@color/blue"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/coming_soon"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:layout_marginVertical="5dp"
                    app:cardBackgroundColor="@color/mint"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="5dp"
                    app:layout_constraintHorizontal_chainStyle="spread"
                    app:layout_constraintEnd_toStartOf="@id/coming_soon2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/card_harian"
                    app:strokeWidth="0dp">

                    <LinearLayout
                        android:layout_width="170dp"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="10dp">

                        <ImageView
                            android:layout_width="75dp"
                            android:layout_height="75dp"
                            android:layout_marginEnd="8dp"
                            android:contentDescription="@string/txt_desc_orang_lagi_doa"
                            android:src="@drawable/ic_comming_soon" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:text="coming soon"
                            android:textColor="@color/blue"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/coming_soon2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:layout_marginVertical="5dp"
                    app:cardBackgroundColor="@color/mint"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="5dp"
                    app:layout_constraintTop_toBottomOf="@id/card_pagipetang"
                    app:layout_constraintStart_toEndOf="@id/coming_soon"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:strokeWidth="0dp">

                    <LinearLayout
                        android:layout_width="170dp"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="10dp">

                        <ImageView
                            android:layout_width="75dp"
                            android:layout_height="75dp"
                            android:layout_marginEnd="8dp"
                            android:contentDescription="@string/txt_desc_orang_lagi_doa"
                            android:src="@drawable/ic_comming_soon" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:text="coming soon"
                            android:textColor="@color/blue"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/coming_soon3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:layout_marginVertical="5dp"
                    app:cardBackgroundColor="@color/mint"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="5dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/coming_soon"
                    app:layout_constraintHorizontal_chainStyle="spread"
                    app:layout_constraintEnd_toStartOf="@id/coming_soon4"
                    app:layout_constraintStart_toStartOf="parent"
                    app:strokeWidth="0dp">

                    <LinearLayout
                        android:layout_width="170dp"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="10dp">

                        <ImageView
                            android:layout_width="75dp"
                            android:layout_height="75dp"
                            android:layout_marginEnd="8dp"
                            android:contentDescription="@string/txt_desc_orang_lagi_doa"
                            android:src="@drawable/ic_comming_soon" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:text="coming soon"
                            android:textColor="@color/blue"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/coming_soon4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:layout_marginVertical="5dp"
                    app:cardBackgroundColor="@color/mint"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="5dp"
                    app:layout_constraintTop_toBottomOf="@id/coming_soon2"
                    app:layout_constraintStart_toEndOf="@id/coming_soon3"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:strokeWidth="0dp">

                    <LinearLayout
                        android:layout_width="170dp"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="10dp">

                        <ImageView
                            android:layout_width="75dp"
                            android:layout_height="75dp"
                            android:layout_marginEnd="8dp"
                            android:contentDescription="@string/txt_desc_orang_lagi_doa"
                            android:src="@drawable/ic_comming_soon" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:text="coming soon"
                            android:textColor="@color/blue"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>


            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <!--    region end-->
</LinearLayout>